[project]
name = "mcp-learnning-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "mcp[cli]>=1.9.2",
    "mysql-connector-python>=9.3.0",
    "openai>=1.84.0",
    "ruff>=0.11.9",
]
